modifications of jtreg testcases to get them working with Graal